--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1
+
 jobs:
   test:
     docker:
@@ -6,10 +7,50 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Run tests
-          command: echo "Running tests"
+          name: Install dependencies
+          command: |
+            python3 -m pip install --upgrade pip
+            pip install -r requirements.txt  # Assurez-vous d'avoir un fichier requirements.txt avec pytest listé
+      - run:
+          name: Run tests with Pytest
+          command: |
+            pytest --junitxml=pytest-results.xml  # Génère un rapport XML pour les résultats des tests
+
+      - store_test_results:
+          path: pytest-results.xml  # Spécifiez le chemin vers le rapport XML
+
+      - store_artifacts:
+          path: 
+            - pytest-results.xml  # Stockez le rapport XML en tant qu'artefact
+            - example.txt  # Si besoin, ajoutez d'autres artefacts ici
+
+  build:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - run:
+          name: Build an artifact
+          command: touch example.txt
+      - store_artifacts:
+          path: example.txt
+
+  deploy:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run:
+          name: deploy
+          command: '#e.g. ./deploy.sh'
+
 workflows:
   version: 2
   example:
     jobs:
       - test
+      - build:
+          requires:
+            - test
+      - deploy:
+          requires:
+            - test
