--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,51 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/python:3.9  # Utilisation d'une image Python
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            python3 -m pip install --upgrade pip
-            pip install -r requirements.txt  # Assurez-vous que pytest est dans requirements.txt
-      - run:
-          name: Run tests with Pytest
-          command: |
-            pytest --junitxml=pytest-results.xml  # Génère un rapport XML pour les résultats des tests
-      - store_test_results:
-          path: pytest-results.xml  # Stocke les résultats des tests pour CircleCI
-      - store_artifacts:
-          path:
-            - pytest-results.xml  # Stocke le rapport XML comme artefact
+      
+image: cimg/python:3.12.2
+  steps:
+checkout
+run:
+    name: Install dependencies
+    command: |
+      python -m pip install --upgrade pip
+      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+run:
+  name: Run tests
+  command: |
+    if [ -f requirements.txt ]; then pytest; else echo "No requirements.txt found"; fi
+
+  build:
+    docker:
+      
+image: cimg/base:stable
+  steps:
+checkout# Replace this with steps to build a package, or executable
+run:
+    name: Build an artifact
+    command: touch example.txt
+store_artifacts:
+  path: example.txt
+
+  deploy:
+    docker:
+      
+image: cimg/base:stable
+  steps:
+run:
+      name: deploy
+      command: |# Add your deployment script or commands here
+        echo "Deploying application..."
 
 workflows:
   version: 2
   example:
     jobs:
-      - test
+      
+test
+build:
+      requires:
+test
+deploy:
+  requires:
+build
